assets/css/style.css
.map-canvas {
   background: none;
}

p {
   font-family: "Playfair Dispay", sans-serif;
}

.header {
   position: relative;
   background-color: #d4d4d2;
   max-width: 100vw;
}

.header-title {
   font-family: "Playfair Display", sans-serif;
   color: #fff;
   font-size: 1.5rem;
   font-style: italic;
   font-weight: 500;
}

.no-padding {
   padding: 0;
}

.route-form {
   border: #a7291d solid;
   padding-top: 1rem;
   background: #fff;
}

.nav-tabs {
   border: none;
}

.mode-tab {
   background-color: #d4d4d2;
   color: #a7291d;
   display: block;
   padding: 0.75rem 1.75rem;
   width: 25vw;
}

.mode-tab i.fas {
   font-size: 1.5rem;
}

.mode-tab.active {
   background-color: #a7291d;
   color: #fffffa;
}

.inputs {
   margin-left: 0.1rem;
}

.deleteButton {
   border: none;
   padding: 0.5rem;
   background: none;
}

.waypoint-button {
   color: #000;
   margin: 0.5rem 0.25rem;
}

.waypoint-button i {
   height: 1rem;
   width: 1rem;
   font-size: 1rem;
   color: orangered;
}

.button-container {
   background: #d95e52;
}

.button {
   display: inline-block;
   height: 3rem;
   font-weight: 500;
   border: 1px solid transparent;
   color: #fffffa;
   text-align: center;
   vertical-align: middle;
   user-select: none;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.route-btn {
   background-color: #a7291d;
}

.route-btn:hover {
   background-color: #6b1b13;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.reset-btn {
   background-color: #733049;
}

.reset-btn:hover {
   background-color: #481b2c;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

#map {
   height: 85vh;
   width: 100%;
}

.footer {
   background: #d4d4d2;
}

@media (min-width: 768px) {
   .map-canvas {
      position: absolute;
      z-index: 999;
      width: 22rem;
      top: 15%;
      left: 1%;
      background: none;
      padding-top: 1rem;
      padding-bottom: 1rem;
   }

   #map {
      height: 93vh;
   }

   .mode-tab {
      display: block;
      padding: 0.5rem 1rem;
      border-top-left-radius: 10%;
      border-top-right-radius: 10%;
      margin: 0 0.25rem;
      width: 3.5rem;
   }

   .footer {
      position: absolute;
      z-index: 999;
      bottom: 1.5%;
      left: 50%;
      transform: translate(-50%, 0);
      width: 35rem;
      font-size: 12px;
      color: #000;
      height: 20px;
   }
}

@media (min-width: 992px) {
   .map-canvas {
      position: absolute;
      z-index: 999;
      width: 32rem;
      top: 15%;
      left: 1%;
      background: none;
      padding-top: 1rem;
      padding-bottom: 1rem;
   }

   #map {
      height: 94vh;
   }

   .footer {
      position: absolute;
      z-index: 999;
      bottom: 1.5%;
      left: 50%;
      transform: translate(-50%, 0);
      width: 35rem;
      font-size: 12px;
      color: #000;
      height: 20px;
   }
}

